Fix #24777 - [Bug] Display entity_bcpg:compoListProduct_bcpg:product on compoList filter form

--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-form-config.xml
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-form-config.xml
@@ -6275,6 +6275,7 @@
 			<form id="filter">
 				<field-visibility>
 					<show id="bcpg:depthLevel" />
+					<show id="entity_bcpg:compoListProduct_bcpg:product" />
 				</field-visibility>
 				<appearance>
 					<field id="bcpg:depthLevel">
