--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-form-config.xml
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-form-config.xml
@@ -8418,6 +8418,7 @@
 				<appearance>
 					<field id="bcpg:entityDataListState" label="hidden" />
 					<field id="bcpg:variantIds" label="hidden" />
+					<field id="bcpg:ingListIng" help="{&quot;width&quot;:200}"/>
 					<field id="bcpg:ingListVolumeQtyPerc" read-only="true" label="hidden" />
 					<field id="bcpg:ingListQtyPercWithYield" read-only="true" />
 					<field id="bcpg:ingListQtyPercWithSecondaryYield" read-only="true" />
