--- a/becpg-project/becpg-project-share/src/main/resources/alfresco/forms/becpg-survey-form-config.xml
+++ b/becpg-project/becpg-project-share/src/main/resources/alfresco/forms/becpg-survey-form-config.xml
@@ -171,7 +171,9 @@
 				
 					<field id="survey:nextQuestion" set="surveyQuestion">
 						<control
-							template="/org/alfresco/components/form/controls/autocomplete-association.ftl" />
+							template="/org/alfresco/components/form/controls/autocomplete-association.ftl" >
+							     <control-param name="ds">becpg/autocomplete/survey</control-param>
+						</control>
 					</field>
 					<field id="survey:fsSurveyListName" set="surveyAutogeneration" />
 					<field id="survey:fsLinkedCharactRefs" set="surveyAutogeneration">
@@ -368,8 +370,10 @@
 					<field id="survey:responseCommentLabel" set="surveyQuestion" />
 				
 					<field id="survey:nextQuestion" set="surveyQuestion">
-						<control
-							template="/org/alfresco/components/form/controls/autocomplete-association.ftl" />
+					<control
+                            template="/org/alfresco/components/form/controls/autocomplete-association.ftl" >
+                                 <control-param name="ds">becpg/autocomplete/survey</control-param>
+                        </control>
 					</field>
 					<field id="survey:fsSurveyListName" set="surveyAutogeneration" />
 					<field id="survey:fsLinkedCharactRefs" set="surveyAutogeneration">
@@ -529,7 +533,9 @@
 					<field id="bcpg:depthLevel" label="hidden"/>
 					<field id="survey:nextQuestion">
 						<control
-							template="/org/alfresco/components/form/controls/autocomplete-association.ftl" />
+                            template="/org/alfresco/components/form/controls/autocomplete-association.ftl" >
+                                 <control-param name="ds">becpg/autocomplete/survey</control-param>
+                        </control>
 					</field>
 					
 				</appearance>
